# ai-agents-monorepo

./: .agent-ideas.md  .gitignore  Dockerfile.base  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json
agents/RAG/research-agent/langgraph/: .gitignore  pyproject.toml
agents/basic/simple/node/: Dockerfile  docker-compose.yml  package-lock.json
agents/basic/simple/node/src/: index.ts
agents/crewai/canonical/post-generator/: .dockerignore  Dockerfile  README.md
agents/crewai/canonical/post-generator/src/: terminal-output.txt
agents/crewai/canonical/post-generator/tech-docs/: agent-ops
agents/crewai/currently-building/scraping/twitter_people_follower/: README.md  pyproject.toml
agents/crewai/currently-building/scraping/twitter_people_follower/src/config/: agents.yaml
agents/lang-graph/currently-building/search-internet/: .env-sample  package-lock.json  tsconfig.json
agents/lang-graph/currently-building/server/: package-lock.json
agents/node/: .gitignore  package.json
agents/post-generator/crewai/: pyproject.toml
agents/post-generator/crewai/src/: router.py
agents/post-generator/crewai/src/config/: agents.yaml
agents/scraping/twitter_people_follower/crewai/twitter-people-follower/: README.md  pyproject.toml
agents/scraping/twitter_people_follower/crewai/twitter-people-follower/src/twitter_user_list_manager_and_tweet_aggregator/config/: tasks.yaml
agents/simple/math/langgraph/: .cursorrules
agents/simple/node/src/: llmHandler.ts
agents/simple/search-internet/: .check-list.md  .dockerignore  .project.md  Dockerfile  README.md  agent.ts  index.ts  package.json
agents/simple/search-internet/prompts/: add express.md
apps/personal-ai-assistant/: package.json
apps/personal-ai-assistant/src/: middleware.ts
apps/personal-ai-assistant/src/app/: layout.tsx  page.tsx
apps/personal-ai-assistant/src/contexts/: AuthContext.tsx
apps/personal-ai-assistant/src/types/: user.ts
apps/server/: .env.example  jest.config.ts  jest.setup.ts  package.json
apps/server/src/: app.module.ts
apps/server/src/config/: configuration.ts
apps/server/src/lang-graph/: lang-graph.controller.ts  lang-graph.module.ts  lang-graph.service.ts
apps/server/test/: agents.e2e-spec.ts
docker/base/: Dockerfile.python-ai
(+24 files in other folders)
