[project]
name = "ai_post_generator_for_converting_ideas_into_structured_content"
version = "0.1.0"
description = "ai_post_generator_for_converting_ideas_into_structured_content using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools,agentops]>=0.11.0,<0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "agentops>=0.1.0"
] 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"] 