[project]
name = "twitter_user_list_manager_and_tweet_aggregator"
version = "0.1.0"
description = "twitter_user_list_manager_and_tweet_aggregator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
twitter_user_list_manager_and_tweet_aggregator = "twitter_user_list_manager_and_tweet_aggregator.main:run"
run_crew = "twitter_user_list_manager_and_tweet_aggregator.main:run"
train = "twitter_user_list_manager_and_tweet_aggregator.main:train"
replay = "twitter_user_list_manager_and_tweet_aggregator.main:replay"
test = "twitter_user_list_manager_and_tweet_aggregator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
